fixed: repo name

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,4 +2,4 @@ extends /base/layout.pug
 block main
 	h1 Hello World!!!
 	hr
-	a(href="https://github.com/mielpl/shablon-Gulp") Visit my GitHub!
+	a(href="https://github.com/mielpl/template-Gulp.js") Visit my GitHub!
